--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -230,6 +230,11 @@
         -ms-text-overflow: clip;
         -o-text-overflow: clip;
         text-overflow: clip;
+        .displayFlex;
+        .align-items(center);
+        .justifyContet(center);
+        flex-shrink: 0;
+        padding: 0 7px;
     }
 }
 
