--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.rtl.css
@@ -188,6 +188,15 @@
   -ms-text-overflow: clip;
   -o-text-overflow: clip;
   text-overflow: clip;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  flex-shrink: 0;
+  padding: 0 7px;
 }
 .menu-toggle-list {
   background: #fff;
